# odoo-ninja

./: .env.example  .gitattributes  .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml
src/odoo_ninja/: __init__.py  auth.py  base.py  client.py  config.py  helpdesk.py  main.py  project.py  project_project.py
